ignore large file

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,5 @@ data/World_Countries_Generalized
 data/TM_WORLD_BORDERS_SIMPL-0.3
 drafts
 data/2004-17_network_change_events.csv
+data/2004-17_network_change_events_wdpaid.csv
 cfree14_pa_dilution.Rproj
